--- a/UniqueryPlus.UniqueSubquery/UniqueryPlus.UniqueSubquery.csproj
+++ b/UniqueryPlus.UniqueSubquery/UniqueryPlus.UniqueSubquery.csproj
@@ -4,18 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>Rostislav Litovkin</Authors>
+    <Product>UniqueryPlus.UniqueSubquery</Product>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.1.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <GraphQL Remove="queries\CollectionStatsQuery.graphql" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="StrawberryShake.Server" Version="14.0.0-rc.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
