--- a/UniqueryPlus/UniqueryPlus.csproj
+++ b/UniqueryPlus/UniqueryPlus.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="KusamaAssetHub.NetApi" Version="0.1.3" />
+    <PackageReference Include="Nethereum.Web3" Version="4.26.0" />
     <PackageReference Include="PolkadotAssetHub.NetApi" Version="0.1.3" />
     <PackageReference Include="UniqueryPlus.Speck" Version="0.1.3" />
     <PackageReference Include="UniqueryPlus.Stick" Version="0.1.3" />
