--- a/PlutoWallet.Model/PlutoWallet.Model.csproj
+++ b/PlutoWallet.Model/PlutoWallet.Model.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+	  <PackageReference Include="PolkadotAssetHub.NetApi" Version="0.1.3" />
 	  <PackageReference Include="Substrate.NET.API" Version="0.9.24-rc6" />
 	  <PackageReference Include="websocketsharp.core" Version="1.0.0" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="9.0.2" />
@@ -37,7 +38,6 @@
     <None Remove="Types\Hydration\" />
     <None Remove="Types\Bifrost\" />
     <None Remove="Types\Polkadot\" />
-    <None Remove="Types\PolkadotAssetHub\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AjunaExt\" />
@@ -50,16 +50,17 @@
     <Folder Include="Types\Hydration\" />
     <Folder Include="Types\Bifrost\" />
     <Folder Include="Types\Polkadot\" />
-    <Folder Include="Types\PolkadotAssetHub\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Generated\Bajun\Bajun.NetApi\Bajun.NetApi.csproj" />
     <ProjectReference Include="..\Generated\Bifrost\Bifrost.NetApi\Bifrost.NetApi.csproj" />
     <ProjectReference Include="..\Generated\Hydration\Hydration.NetApi\Hydration.NetApi.csproj" />
+    <ProjectReference Include="..\Generated\KusamaAssetHub\KusamaAssetHub.NetApi\KusamaAssetHub.NetApi.csproj" />
     <ProjectReference Include="..\Generated\Opal\Opal.NetApi\Opal.NetApi.csproj" />
     <ProjectReference Include="..\Generated\PolkadotAssetHub\PolkadotAssetHub.NetApi\PolkadotAssetHub.NetApi.csproj" />
     <ProjectReference Include="..\Generated\PolkadotPeople\PolkadotPeople.NetApi\PolkadotPeople.NetApi.csproj" />
     <ProjectReference Include="..\Generated\Polkadot\Polkadot.NetApi\Polkadot.NetApi.csproj" />
+    <ProjectReference Include="..\Generated\Unique\Unique.NetApi\Unique.NetApi.csproj" />
     <ProjectReference Include="..\UniqueryPlus\UniqueryPlus.csproj" />
   </ItemGroup>
 </Project>
