--- a/.github/workflows/uniquery-plus-generated-nuget-publish.yaml
+++ b/.github/workflows/uniquery-plus-generated-nuget-publish.yaml
@@ -44,6 +44,13 @@ jobs:
         PROJECT_FILE_PATH: ./Generated/KusamaAssetHub/KusamaAssetHub.NetApi/KusamaAssetHub.NetApi.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
 
+    - name: Publish Unique
+      uses: brandedoutcast/publish-nuget@v2.5.2
+      with:
+        PACKAGE_NAME: UniqueryPlus.Unique
+        PROJECT_FILE_PATH: ./Generated/Unique/Unique.NetApi/Unique.NetApi.csproj
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
+
     - name: Publish Stick
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
@@ -56,4 +63,11 @@ jobs:
       with:
         PACKAGE_NAME: UniqueryPlus.Speck
         PROJECT_FILE_PATH: ./Speck/UniqueryPlus.Speck.csproj
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
+
+    - name: Publish UniqueSubquery
+      uses: brandedoutcast/publish-nuget@v2.5.2
+      with:
+        PACKAGE_NAME: UniqueryPlus.UniqueSubquery
+        PROJECT_FILE_PATH: ./UniqueryPlus.UniqueSubquery/UniqueryPlus.UniqueSubquery.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}} 
