--- a/UniqueryPlus/UniqueryPlus.csproj
+++ b/UniqueryPlus/UniqueryPlus.csproj
@@ -9,6 +9,7 @@
     <Product>UniqueryPlus</Product>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>NU1901;NU1902;NU1903;NU1904</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
