Efficient infinite Nft scrolling

--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -463,6 +463,9 @@
 	  <MauiXaml Update="Components\Nft\NftImageView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Components\Nft\NftListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Components\Nft\NftLittleThumbnailView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
